--- a/frontend/public/pages/alpha.html
+++ b/frontend/public/pages/alpha.html
@@ -41,7 +41,8 @@
         }
 
         .sidebar {
-            width: 220px;
+            min-width: 300px;
+            max-width: 300px;
             background: rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(10px);
             border-right: 1px solid rgba(6, 251, 254, 0.15);
@@ -50,6 +51,7 @@
             z-index: 1;
             position: relative;
             overflow: hidden;
+            flex-shrink: 0;
         }
 
         .sidebar::before {
@@ -82,6 +84,8 @@
             flex: 1;
             overflow-y: auto;
             padding: 8px 0;
+            min-width: 300px;
+            max-width: 300px;
         }
 
         .conversation-item {
@@ -94,6 +98,45 @@
             font-size: 13px;
             opacity: 0.7;
             border-bottom: 1px solid rgba(6, 251, 254, 0.05);
+            min-width: 300px;
+            max-width: 300px;
+            box-sizing: border-box;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .conversation-title {
+            flex-grow: 1;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-right: 10px;
+        }
+
+        .delete-button {
+            background: none;
+            border: none;
+            color: var(--text-color);
+            font-size: 16px;
+            cursor: pointer;
+            padding: 0;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .conversation-item:hover .delete-button {
+            opacity: 0.7;
+        }
+
+        .delete-button:hover {
+            opacity: 1 !important;
+            color: var(--border-color);
         }
 
         .conversation-item:hover {
@@ -136,6 +179,7 @@
             background: rgba(0, 0, 0, 0.6);
             position: relative;
             overflow: hidden;
+            min-width: 0;
         }
 
         .main-content::before {
@@ -181,6 +225,7 @@
             display: flex;
             flex-direction: column;
             gap: 16px;
+            min-width: 0;
         }
 
         .message {
@@ -190,6 +235,7 @@
             max-width: 100%;
             opacity: 0;
             animation: fadeIn 0.3s ease forwards;
+            min-width: 0;
         }
 
         @keyframes fadeIn {
@@ -206,6 +252,8 @@
         .message.user {
             flex-direction: row-reverse;
             align-self: flex-end;
+            margin-left: auto;
+            max-width: 80%;
         }
 
         .avatar {
@@ -225,6 +273,8 @@
         .message.user .avatar {
             background: rgba(255, 0, 255, 0.08);
             box-shadow: 0 0 15px rgba(255, 0, 255, 0.3);
+            margin-left: 0;
+            margin-right: 10px;
         }
 
         @keyframes bounce {
@@ -248,14 +298,18 @@
             font-size: 13px;
             line-height: 1.6;
             backdrop-filter: blur(10px);
-            flex: 1;
-            max-width: calc(100% - 60px);
+            max-width: 60%;
+            min-width: 0;
+            word-wrap: break-word;
         }
 
         .message.user .message-text {
             background: rgba(6, 251, 254, 0.1);
             border-color: rgba(6, 251, 254, 0.2);
             box-shadow: 0 2px 12px rgba(6, 251, 254, 0.1);
+            margin-right: 0;
+            margin-left: 10px;
+            max-width: 300px;
         }
 
         .message-text::before {
@@ -272,7 +326,6 @@
                 transparent
             );
             transform: translateX(-100%);
-            transition: transform 0.5s ease;
         }
 
         .message:hover .message-text::before {
@@ -496,6 +549,84 @@
                 transform: scale(1);
             }
         }
+
+        .message-time {
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.5);
+            margin-bottom: 8px;
+        }
+
+        .message-content {
+            margin-top: 8px;
+        }
+
+        .message.user .message-time {
+            text-align: right;
+        }
+
+        .chat-link {
+            color: #06fbfe;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            border-bottom: 1px solid rgba(6, 251, 254, 0.3);
+            padding-bottom: 2px;
+        }
+
+        .chat-link:hover {
+            color: #fff;
+            border-bottom-color: #fff;
+            text-shadow: 0 0 8px rgba(6, 251, 254, 0.5);
+        }
+
+        .side-browser {
+            position: fixed;
+            top: 0;
+            right: -50%;
+            width: 40%;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.95);
+            box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
+            transition: right 0.3s ease;
+            z-index: 1000;
+            backdrop-filter: blur(10px);
+            border-left: 1px solid rgba(6, 251, 254, 0.15);
+        }
+
+        .side-browser.active {
+            right: 0;
+        }
+
+        .browser-header {
+            height: 40px;
+            background: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            padding: 0 10px;
+            border-bottom: 1px solid rgba(6, 251, 254, 0.15);
+        }
+
+        .close-browser {
+            background: none;
+            border: none;
+            color: var(--text-color);
+            font-size: 24px;
+            cursor: pointer;
+            padding: 5px 10px;
+            transition: all 0.3s ease;
+        }
+
+        .close-browser:hover {
+            color: var(--border-color);
+            text-shadow: 0 0 8px var(--border-color);
+        }
+
+        .browser-frame {
+            width: 100%;
+            height: calc(100vh - 40px);
+            border: none;
+            background: white;
+        }
     </style>
 </head>
 <body>
@@ -511,26 +642,31 @@
     <div class="chat-container">
         <div class="sidebar">
             <div class="sidebar-header">会话记录</div>
-            <div class="conversation-list">
-                <div class="conversation-item active">新对话</div>
-                <div class="conversation-item">材料数据库问答</div>
-                <div class="conversation-item">跨尺度模拟分析</div>
-                <div class="conversation-item">工作流程设计</div>
-                <div class="conversation-item">高通量计算</div>
+            <div class="conversation-list" id="conversationList">
+                <!-- 会话列表将由JavaScript动态生成 -->
             </div>
         </div>
         <div class="main-content">
             <div class="chat-header">Alpha AI 助手</div>
             <div class="chat-messages" id="chatMessages"></div>
             <div class="chat-input-container">
-                <textarea class="chat-input" placeholder="输入您的问题..."></textarea>
+                <textarea class="chat-input" id="chatInput" placeholder="输入您的问题..."></textarea>
                 <div class="chat-controls">
-                    <button class="chat-button">清空对话</button>
-                    <button class="chat-button primary">发送</button>
+                    <button class="chat-button" id="clearButton">清空对话</button>
+                    <button class="chat-button primary" id="sendButton">发送</button>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- 侧边浏览器 -->
+    <div id="sideBrowser" class="side-browser">
+        <div class="browser-header">
+            <button class="close-browser">×</button>
+        </div>
+        <iframe id="browserFrame" class="browser-frame"></iframe>
+    </div>
+
     <script src="../js/chat.js"></script>
 </body>
 </html>
