--- a/frontend/public/pages/alpha.html
+++ b/frontend/public/pages/alpha.html
@@ -88,6 +88,9 @@
             text-shadow: 0 0 8px var(--border-color);
             letter-spacing: 0.5px;
             background: rgba(0, 0, 0, 0.4);
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
         }
 
         .conversation-list {
@@ -114,6 +117,7 @@
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            gap: 12px;
         }
 
         .conversation-title {
@@ -655,14 +659,16 @@
         }
 
         .conversation-icon {
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: rgba(6, 251, 254, 0.7);
+            width: 16px;
+            height: 16px;
+            opacity: 0.6;
             flex-shrink: 0;
+            color: var(--text-color);
+        }
+
+        .conversation-icon svg {
+            width: 100%;
+            height: 100%;
         }
 
         .conversation-item {
@@ -690,19 +696,33 @@
         .conversation-item.active .conversation-icon {
             color: rgba(6, 251, 254, 1);
         }
+
+        .logo-link {
+            display: block;
+            text-decoration: none;
+        }
+
+        .logo {
+            height: 40px;
+            width: auto;
+        }
     </style>
 </head>
 <body>
     <div id="bg"></div>
     
     <!-- 返回首页按钮 -->
-    <a href="../index.html" class="back-home">返回首页</a>
+    
 
     <div class="chat-container">
         <div class="sidebar">
-            <div class="sidebar-header">会话记录</div>
-            <div class="conversation-list" id="conversationList">
-                <!-- 会话列表将由JavaScript动态生成 -->
+            <div class="sidebar-header">
+                <a href="../index.html" class="logo-link">
+                    <img src="../assets/logo.png" alt="IDM Explorer Lab" class="logo">
+                </a>
+            </div>
+            <div id="conversationList" class="conversation-list">
+                <!-- 会话列表将通过 JavaScript 动态加载 -->
             </div>
         </div>
         <div class="main-content">
