feat: 添加AI平台导航的下拉菜单，包含Alpha模型和AI Studio选项

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,7 +49,7 @@
             
             <!-- 四个模块 -->
             <div class="floating-modules hidden">
-                <div class="module top-left">
+                <div class="module top-left" onclick="window.location.href='./pages/database/index.html'">
                     <img src="./assets/icon_database.png" alt="Database" class="border-icon">
                     <div class="module-content">
                         <div class="module-text">
