--- a/frontend/public/pages/database/index.html
+++ b/frontend/public/pages/database/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>材料数据库 - IDM Explorer Lab</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_xxxxx.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_xxxxx.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -21,15 +21,21 @@
                 <div class="dropdown">
                     <a href="../database/index.html" class="nav-item active">材料数据库 <span class="dropdown-arrow">▾</span></a>
                     <div class="dropdown-content">
-                        <a href="#" class="dropdown-item">公共数据库</a>
-                        <a href="#" class="dropdown-item">IDM数据库</a>
-                        <a href="#" class="dropdown-item">私有数据集</a>
+                        <a href="index.html" class="dropdown-item active">公共数据库</a>
+                        <a href="idmdb.html" class="dropdown-item">IDM数据库</a>
+                        <a href="privatedb.html" class="dropdown-item">私有数据集</a>
                     </div>
                 </div>
                 <a href="../simulation/index.html" class="nav-item">跨尺度仿真</a>
                 <a href="../workflow/index.html" class="nav-item">高通量计算</a>
                 <a href="../preparation/index.html" class="nav-item">表征与制备</a>
-                <a href="../ai/index.html" class="nav-item">AI平台</a>
+                <div class="dropdown">
+                    <a href="../../pages/alpha.html" class="nav-item">AI平台 <span class="dropdown-arrow">▾</span></a>
+                    <div class="dropdown-content">
+                        <a href="../../pages/alpha.html" class="dropdown-item">Alpha模型</a>
+                        <a href="#" class="dropdown-item">AI Studio</a>
+                    </div>
+                </div>
             </div>
             <div class="nav-right">
                 <a href="#" class="nav-item">我的项目</a>
@@ -43,15 +49,15 @@
             <div class="side-nav">
                 <h2 class="side-title">材料数据库</h2>
                 <div class="nav-list">
-                    <a href="#" class="nav-item active">
+                    <a href="index.html" class="nav-item active">
                         <i class="fas fa-database"></i>
                         <span>公共数据库</span>
                     </a>
-                    <a href="#" class="nav-item">
+                    <a href="idmdb.html" class="nav-item">
                         <i class="fas fa-server"></i>
                         <span>IDM数据库</span>
                     </a>
-                    <a href="#" class="nav-item">
+                    <a href="privatedb.html" class="nav-item">
                         <i class="fas fa-user-lock"></i>
                         <span>私有数据集</span>
                     </a>
