--- a/frontend/public/pages/database/privatedata/editdata.html
+++ b/frontend/public/pages/database/privatedata/editdata.html
@@ -26,9 +26,9 @@
                         <a href="../privatedb.html" class="dropdown-item active">私有数据集</a>
                     </div>
                 </div>
-                <a href="../simulation/index.html" class="nav-item">跨尺度仿真</a>
-                <a href="../workflow/index.html" class="nav-item">高通量计算</a>
-                <a href="../preparation/index.html" class="nav-item">表征与制备</a>
+                <a href="../../simulation/index.html" class="nav-item">跨尺度仿真</a>
+                <a href="../../workflow/index.html" class="nav-item">高通量计算</a>
+                <a href="../../preparation/index.html" class="nav-item">表征与制备</a>
                 <div class="dropdown">
                     <a href="../../alpha.html" class="nav-item">AI平台 <span class="dropdown-arrow">▾</span></a>
                     <div class="dropdown-content">
