--- a/frontend/public/pages/simulation/index.html
+++ b/frontend/public/pages/simulation/index.html
@@ -20,14 +20,14 @@
                 <div class="dropdown">
                     <a href="../database/index.html" class="nav-item">材料数据库 <span class="dropdown-arrow">▾</span></a>
                     <div class="dropdown-content">
-                        <a href="index.html" class="dropdown-item">公共数据库</a>
-                        <a href="idmdb.html" class="dropdown-item">IDM数据库</a>
-                        <a href="privatedb.html" class="dropdown-item">私有数据集</a>
+                        <a href="../database/index.html" class="dropdown-item">公共数据库</a>
+                        <a href="../database/idmdb.html" class="dropdown-item">IDM数据库</a>
+                        <a href="../database/privatedb.html" class="dropdown-item">私有数据集</a>
                     </div>
                 </div>
                 
                 <div class="dropdown">
-                    <a href="#" class="nav-item" id="cross-scale-simulation">跨尺度仿真 <span class="dropdown-arrow">▾</span></a>
+                    <a href="#" class="nav-item active" id="cross-scale-simulation">跨尺度仿真 <span class="dropdown-arrow">▾</span></a>
                     <div class="dropdown-content" id="cross-scale-dropdown">
                         <a href="index.html" class="dropdown-item">仿真软件仓库</a>
                         <a href="calclist.html" class="dropdown-item">计算任务管理</a>
@@ -54,101 +54,127 @@
         <div class="main-content">
             <!-- 左侧导航 -->
             <div class="side-nav">
-                <h2 class="side-title">材料数据库</h2>
+                <h2 class="side-title">跨尺度仿真</h2>
                 <div class="nav-list">
                     <a href="index.html" class="nav-item active">
-                        <i class="fas fa-database"></i>
-                        <span>公共数据库</span>
+                        <i class="fas fa-cube"></i>
+                        <span>仿真软件仓库</span>
                     </a>
-                    <a href="idmdb.html" class="nav-item">
-                        <i class="fas fa-server"></i>
-                        <span>IDM数据库</span>
-                    </a>
-                    <a href="privatedb.html" class="nav-item">
-                        <i class="fas fa-user-lock"></i>
-                        <span>私有数据集</span>
+                    <a href="calclist.html" class="nav-item">
+                        <i class="fas fa-tasks"></i>
+                        <span>计算任务管理</span>
                     </a>
                 </div>
             </div>
 
             <!-- 右侧内容区 -->
             <div class="content-area">
-                <!-- Materials Project -->
-                <div class="database-card">
-                    <a href="https://materialsproject.org" target="_blank" class="card-link">
-                        <div class="card-icon">
-                            <img src="../../assets/db-logos/materials-project.png" alt="Materials Project">
-                        </div>
-                        <div class="card-content">
-                            <h2>Materials Project</h2>
-                            <p>由美国能源部资助的材料数据库，提供超过130,000种无机化合物的计算数据，包括晶体结构、能带、相图等信息，支持材料设计与发现。提供API接口和Python工具包，方便数据获取和分析。</p>
-                        </div>
-                    </a>
+                <!-- 分类标签 -->
+                <div class="category-tabs">
+                    <button class="category-tab active" data-category="all">全部</button>
+                    <button class="category-tab" data-category="micro">微观</button>
+                    <button class="category-tab" data-category="meso">介观</button>
+                    <button class="category-tab" data-category="macro">宏观</button>
                 </div>
 
-                <!-- AFLOW -->
-                <div class="database-card">
-                    <a href="http://www.aflowlib.org" target="_blank" class="card-link">
-                        <div class="card-icon">
-                            <img src="../../assets/db-logos/aflowlib.png" alt="AFLOW">
+                <!-- 软件网格 -->
+                <div class="software-grid">
+                    <div class="software-card" data-name="vasp" data-category="micro">
+                        <img src="../../assets/simulation-logos/vasp.png" alt="VASP" class="software-icon">
+                        <span class="software-name">VASP</span>
+                        <div class="software-links">
+                            <a href="https://www.vasp.at/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('vasp')">提交计算</a>
                         </div>
-                        <div class="card-content">
-                            <h2>AFLOW (Automatic Flow)</h2>
-                            <p>高通量计算材料数据库，包含超过300万个材料结构和性质。提供材料的热力学、电子、磁性和机械性质等数据，支持材料筛选和预测。</p>
+                    </div>
+                    <div class="software-card" data-name="lammps" data-category="meso">
+                        <img src="../../assets/simulation-logos/lammps.png" alt="LAMMPS" class="software-icon">
+                        <span class="software-name">LAMMPS</span>
+                        <div class="software-links">
+                            <a href="https://www.lammps.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('lammps')">提交计算</a>
                         </div>
-                    </a>
-                </div>
-
-                <!-- OQMD -->
-                <div class="database-card">
-                    <a href="http://oqmd.org" target="_blank" class="card-link">
-                        <div class="card-icon">
-                            <img src="../../assets/db-logos/oqmd.png" alt="OQMD">
+                    </div>
+                    <div class="software-card" data-name="siesta" data-category="micro">
+                        <img src="../../assets/simulation-logos/siesta.png" alt="SIESTA" class="software-icon">
+                        <span class="software-name">SIESTA</span>
+                        <div class="software-links">
+                            <a href="https://siesta-project.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('siesta')">提交计算</a>
                         </div>
-                        <div class="card-content">
-                            <h2>OQMD (Open Quantum Materials Database)</h2>
-                            <p>开放量子材料数据库，收录了超过80万种材料的DFT计算结果，包括形成能、能带结构等物理性质，为材料设计和发现提供重要参考。</p>
+                    </div>
+                    <div class="software-card" data-name="qe" data-category="micro">
+                        <img src="../../assets/simulation-logos/qe.png" alt="Quantum ESPRESSO" class="software-icon">
+                        <span class="software-name">Quantum ESPRESSO</span>
+                        <div class="software-links">
+                            <a href="https://www.quantum-espresso.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('qe')">提交计算</a>
                         </div>
-                    </a>
-                </div>
-
-                <!-- Crystallography Open Database -->
-                <div class="database-card">
-                    <a href="http://www.crystallography.net/cod" target="_blank" class="card-link">
-                        <div class="card-icon">
-                            <img src="../../assets/db-logos/COD.svg" alt="COD">
+                    </div>
+                    <div class="software-card" data-name="gromacs" data-category="meso">
+                        <img src="../../assets/simulation-logos/gromacs.png" alt="GROMACS" class="software-icon">
+                        <span class="software-name">GROMACS</span>
+                        <div class="software-links">
+                            <a href="https://www.gromacs.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('gromacs')">提交计算</a>
                         </div>
-                        <div class="card-content">
-                            <h2>COD (Crystallography Open Database)</h2>
-                            <p>开放晶体学数据库，提供超过40万个晶体结构数据，包括有机、无机和金属有机化合物。所有数据免费开放，支持多种格式下载和在线查看。</p>
+                    </div>
+                    <div class="software-card" data-name="cp2k" data-category="micro meso">
+                        <img src="../../assets/simulation-logos/cp2k.png" alt="CP2K" class="software-icon">
+                        <span class="software-name">CP2K</span>
+                        <div class="software-links">
+                            <a href="https://www.cp2k.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('cp2k')">提交计算</a>
                         </div>
-                    </a>
-                </div>
-
-                <!-- ICSD -->
-                <div class="database-card">
-                    <a href="https://icsd.products.fiz-karlsruhe.de" target="_blank" class="card-link">
-                        <div class="card-icon">
-                            <img src="../../assets/db-logos/ICSD.svg" alt="ICSD">
+                    </div>
+                    <div class="software-card" data-name="gaussian" data-category="micro">
+                        <img src="../../assets/simulation-logos/gaussian.png" alt="Gaussian" class="software-icon">
+                        <span class="software-name">Gaussian</span>
+                        <div class="software-links">
+                            <a href="https://gaussian.com/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('gaussian')">提交计算</a>
                         </div>
-                        <div class="card-content">
-                            <h2>ICSD (Inorganic Crystal Structure Database)</h2>
-                            <p>无机晶体结构数据库，收录超过21万个实验测定的无机化合物晶体结构，是材料研究中最权威的晶体结构数据库之一。</p>
+                    </div>
+                    <div class="software-card" data-name="abinit" data-category="micro">
+                        <img src="../../assets/simulation-logos/abinit.png" alt="ABINIT" class="software-icon">
+                        <span class="software-name">ABINIT</span>
+                        <div class="software-links">
+                            <a href="https://www.abinit.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('abinit')">提交计算</a>
                         </div>
-                    </a>
-                </div>
-
-                <!-- Materialscloud -->
-                <div class="database-card">
-                    <a href="https://www.materialscloud.org" target="_blank" class="card-link">
-                        <div class="card-icon">
-                            <img src="../../assets/db-logos/materialscloud.png" alt="Materials Cloud">
+                    </div>
+                    <div class="software-card" data-name="castep" data-category="micro">
+                        <img src="../../assets/simulation-logos/castep.png" alt="CASTEP" class="software-icon">
+                        <span class="software-name">CASTEP</span>
+                        <div class="software-links">
+                            <a href="http://www.castep.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('castep')">提交计算</a>
                         </div>
-                        <div class="card-content">
-                            <h2>Materials Cloud</h2>
-                            <p>开源材料科学平台，提供计算材料学工具、数据和资源。包含各类材料的计算数据，支持在线计算和数据分析，促进材料科学研究的开放共享。</p>
+                    </div>
+                    <div class="software-card" data-name="amber" data-category="meso">
+                        <img src="../../assets/simulation-logos/amber.png" alt="AMBER" class="software-icon">
+                        <span class="software-name">AMBER</span>
+                        <div class="software-links">
+                            <a href="https://ambermd.org/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('amber')">提交计算</a>
                         </div>
-                    </a>
+                    </div>
+                    <div class="software-card" data-name="namd" data-category="meso">
+                        <img src="../../assets/simulation-logos/namd.png" alt="NAMD" class="software-icon">
+                        <span class="software-name">NAMD</span>
+                        <div class="software-links">
+                            <a href="https://www.ks.uiuc.edu/Research/namd/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('namd')">提交计算</a>
+                        </div>
+                    </div>
+                    <div class="software-card" data-name="wien2k" data-category="micro">
+                        <img src="../../assets/simulation-logos/wien2k.png" alt="WIEN2k" class="software-icon">
+                        <span class="software-name">WIEN2k</span>
+                        <div class="software-links">
+                            <a href="https://www.wien2k.at/" target="_blank">软件官网</a>
+                            <a href="#" onclick="submitCalculation('wien2k')">提交计算</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -159,5 +185,37 @@
             <div class="tech-lines"></div>
         </div>
     </div>
+
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const tabs = document.querySelectorAll('.category-tab');
+        const cards = document.querySelectorAll('.software-card');
+
+        tabs.forEach(tab => {
+            tab.addEventListener('click', () => {
+                // Remove active class from all tabs
+                tabs.forEach(t => t.classList.remove('active'));
+                // Add active class to clicked tab
+                tab.classList.add('active');
+
+                const category = tab.dataset.category;
+                
+                // Show/hide cards based on category
+                cards.forEach(card => {
+                    if (category === 'all' || card.dataset.category === category) {
+                        card.style.display = 'flex';
+                    } else {
+                        card.style.display = 'none';
+                    }
+                });
+            });
+        });
+    });
+
+    function submitCalculation(software) {
+        // 跳转到calcinfo页面，并将软件名称作为参数传递
+        window.location.href = `./calcinfo.html?software=${encodeURIComponent(software)}`;
+    }
+    </script>
 </body>
 </html>
